@@ -1114,6 +1114,8 @@ ui.addremove.AddRemovePanel.remove-all = Odstranit v\u0161e
 ui.AttributeTab.flash-selected-rows = Zablikat vybran\u00FDmi z\u00E1znamy
 ui.AttributeTab.one-or-more-layers-must-be-present = Jedna nebo v\u00EDce vrstev mus\u00ED b\u00FDt k dispozici
 ui.AttributeTab.one-or-more-rows-must-be-selected = Jeden nebo v\u00EDce \u0159\u00E1dk\u016F mus\u00ED b\u00FDt vybr\u00E1no
+ui.AttributeTab.pan-to-previous-row = T\:Pan to previous row
+ui.AttributeTab.pan-to-next-row = T\:Pan to next row
 ui.AttributeTab.select-in-task-window = V\u00FDb\u011Br v pracovn\u00EDm okn\u011B
 ui.AttributeTab.task-frame-must-be-open = Pracovn\u00ED r\u00E1m mus\u00ED b\u00FDt otev\u0159en\u00FD
 ui.AttributeTab.zoom-to-full-extent = Zm\u011Bna m\u011B\u0159\u00EDtka na maxim\u00E1ln\u00ED rozsah mapy
