@@ -1148,6 +1148,8 @@ ui.addremove.AddRemovePanel.remove-all = Alle Entfernen
 ui.AttributeTab.flash-selected-rows = ausgew\u00E4hlte Zeilen aufblinken
 ui.AttributeTab.one-or-more-layers-must-be-present = Ein oder mehrere Ebenen m\u00FCssen vorhanden sein
 ui.AttributeTab.one-or-more-rows-must-be-selected = Eine oder mehrere Zeilen m\u00FCssen ausgew\u00E4hlt sein
+ui.AttributeTab.pan-to-previous-row = T\:Pan to previous row
+ui.AttributeTab.pan-to-next-row = T\:Pan to next row
 ui.AttributeTab.select-in-task-window = Ausw\u00E4hlen im Projektfenster
 ui.AttributeTab.task-frame-must-be-open = Projekt muss ge\u00F6ffnet sein
 ui.AttributeTab.zoom-to-full-extent = Zoom auf volle Gr\u00F6sse
