@@ -1148,6 +1148,8 @@ ui.addremove.AddRemovePanel.remove-all = Remove All
 ui.AttributeTab.flash-selected-rows = Flash Selected Rows
 ui.AttributeTab.one-or-more-layers-must-be-present = One or more layers must be present.
 ui.AttributeTab.one-or-more-rows-must-be-selected = One or more rows must be selected.
+ui.AttributeTab.pan-to-previous-row = Pan to previous row
+ui.AttributeTab.pan-to-next-row = Pan to next row
 ui.AttributeTab.select-in-task-window = Select In Project Window
 ui.AttributeTab.task-frame-must-be-open = Project frame must be open.
 ui.AttributeTab.zoom-to-full-extent = Zoom To Full Extent
