@@ -1189,6 +1189,8 @@ ui.addremove.AddRemovePanel.remove-all=Eliminar todo
 ui.AttributeTab.flash-selected-rows=Mostrar los objetos seleccionados 
 ui.AttributeTab.one-or-more-layers-must-be-present=Una o m\u00E1s capas deben existir.
 ui.AttributeTab.one-or-more-rows-must-be-selected=Una o m\u00E1s filas deben estar seleccionadas.
+ui.AttributeTab.pan-to-previous-row = T\:Pan to previous row
+ui.AttributeTab.pan-to-next-row = T\:Pan to next row
 ui.AttributeTab.select-in-task-window=Seleccionar un nuevo objeto 
 ui.AttributeTab.task-frame-must-be-open=La ventana de tarea debe estar abierta.
 ui.AttributeTab.zoom-to-full-extent=Zoom de extensi\u00F3n m\u00E1xima  
