@@ -1117,6 +1117,8 @@ ui.addremove.AddRemovePanel.remove-all = Poista kaikki
 ui.AttributeTab.flash-selected-rows = V\u00E4l\u00E4yt\u00E4 valittuja rivej\u00E4
 ui.AttributeTab.one-or-more-layers-must-be-present = Tarvitaan v\u00E4hint\u00E4\u00E4n yksi taso
 ui.AttributeTab.one-or-more-rows-must-be-selected = V\u00E4hint\u00E4\u00E4n yksi rivi on oltava valittuna
+ui.AttributeTab.pan-to-previous-row = T\:Pan to previous row
+ui.AttributeTab.pan-to-next-row = T\:Pan to next row
 ui.AttributeTab.select-in-task-window = Valitse projekti-ikkunasta
 ui.AttributeTab.task-frame-must-be-open = Projektikehyksen on altava auki
 ui.AttributeTab.zoom-to-full-extent = N\u00E4yt\u00E4 kaikki
