@@ -1148,6 +1148,8 @@ ui.addremove.AddRemovePanel.remove-all = Tout supprimer
 ui.AttributeTab.flash-selected-rows = Afficher les enregistrements s\u00E9lectionn\u00E9s sur la carte
 ui.AttributeTab.one-or-more-layers-must-be-present = Une ou plusieurs couches doivent \u00EAtre pr\u00E9sentes
 ui.AttributeTab.one-or-more-rows-must-be-selected = Une ou plusieurs couches doivent \u00EAtre s\u00E9lectionn\u00E9es
+ui.AttributeTab.pan-to-previous-row = Centrer sur l'enregistrement pr\u00E9c\u00E9dent
+ui.AttributeTab.pan-to-next-row = Centrer sur l'enregistrement suivant
 ui.AttributeTab.select-in-task-window = S\u00E9lectionner un nouvel enregistrement
 ui.AttributeTab.task-frame-must-be-open = La fen\u00EAtre de t\u00E2che doit \u00EAtre ouverte
 ui.AttributeTab.zoom-to-full-extent = Zoomer sur l'\u00E9tendue maximale
