@@ -1115,6 +1115,8 @@ ui.addremove.AddRemovePanel.remove-all = Mindent elt\u00E1vol\u00EDt
 ui.AttributeTab.flash-selected-rows = Villogtasd a szelekt\u00E1lt sorokat
 ui.AttributeTab.one-or-more-layers-must-be-present = Egy vagy t\u00F6bb r\u00E9tegnek l\u00E9teznie kell.
 ui.AttributeTab.one-or-more-rows-must-be-selected = Egy vagy t\u00F6bb sort ki kell v\u00E1lasztani.
+ui.AttributeTab.pan-to-previous-row = T\:Pan to previous row
+ui.AttributeTab.pan-to-next-row = T\:Pan to next row
 ui.AttributeTab.select-in-task-window = Kiv\u00E1laszt\u00E1s a t\u00E9rk\u00E9pen
 ui.AttributeTab.task-frame-must-be-open = A Projekt ablak nincs nyitva.
 ui.AttributeTab.zoom-to-full-extent = Nagy\u00EDt\u00E1s terjedelemre
