@@ -1189,6 +1189,8 @@ ui.addremove.AddRemovePanel.remove-all=Elimina tutto
 ui.AttributeTab.flash-selected-rows=Mostra le righe selezionate
 ui.AttributeTab.one-or-more-layers-must-be-present=Uno o pi\u00F9 livelli devono essere presenti
 ui.AttributeTab.one-or-more-rows-must-be-selected=Una o pi\u00F9 righe devono essere selezionate
+ui.AttributeTab.pan-to-previous-row = T\:Pan to previous row
+ui.AttributeTab.pan-to-next-row = T\:Pan to next row
 ui.AttributeTab.select-in-task-window=Seleziona nella finestra del progetto
 ui.AttributeTab.task-frame-must-be-open=Una finestra di progetto deve essere aperta
 ui.AttributeTab.zoom-to-full-extent=Zoom all'estensione massima
