@@ -1117,6 +1117,8 @@ ui.addremove.AddRemovePanel.remove-all = \u3059\u3079\u3066\u9664\u53BB
 ui.AttributeTab.flash-selected-rows = \u9078\u629E\u884C\u306E\u30D5\u30E9\u30C3\u30B7\u30E5
 ui.AttributeTab.one-or-more-layers-must-be-present = \uFF11\u3064\u306A\u3044\u3057\u306F\u8907\u6570\u306E\u884C\u3092\u8868\u793A\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059.
 ui.AttributeTab.one-or-more-rows-must-be-selected = \uFF11\u3064\u306A\u3044\u3057\u306F\u8907\u6570\u306E\u884C\u3092\u9078\u629E\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059.
+ui.AttributeTab.pan-to-previous-row = T\:Pan to previous row
+ui.AttributeTab.pan-to-next-row = T\:Pan to next row
 ui.AttributeTab.select-in-task-window = \u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u30A6\u30A3\u30F3\u30C9\u30FC\u3067\u8868\u793A
 ui.AttributeTab.task-frame-must-be-open = \u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u30D5\u30EC\u30FC\u30E0\u3092\u958B\u304F\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059.
 ui.AttributeTab.zoom-to-full-extent = \u5143\u306E\u30B5\u30A4\u30BA\u306B\u8868\u793A
