@@ -1077,6 +1077,8 @@ ui.addremove.AddRemovePanel.remove-all = \u0d0e\u0d32\u0d4d\u0d32\u0d3e\u0d02 \u
 ui.AttributeTab.flash-selected-rows = Flash Selected Rows
 ui.AttributeTab.one-or-more-layers-must-be-present = \u0d12\u0d28\u0d4d\u0d28\u0d4b \u0d05\u0d24\u0d3f\u0d32\u0d4d\u200d \u0d15\u0d42\u0d1f\u0d41\u0d24\u0d32\u0d4b \u0d32\u0d2f\u0d46\u0d30\u0d41\u0d15\u0d33\u0d4d\u200d \u0d28\u0d3f\u0d30\u0d4d\u200d\u0d2c\u0d28\u0d4d\u0d27\u0d2e\u0d3e\u0d2f\u0d41\u0d02 \u0d09\u0d23\u0d4d\u0d1f\u0d3e\u0d2f\u0d3f\u0d30\u0d3f\u0d15\u0d4d\u0d15\u0d23\u0d02 .
 ui.AttributeTab.one-or-more-rows-must-be-selected = \u0d12\u0d28\u0d4d\u0d28\u0d4b \u0d05\u0d24\u0d3f\u0d32\u0d4d\u200d \u0d15\u0d42\u0d1f\u0d41\u0d24\u0d32\u0d4b \u0d35\u0d30\u0d3f\u0d15\u0d33\u0d4d \u0d28\u0d3f\u0d30\u0d4d\u200d\u0d2c\u0d28\u0d4d\u0d27\u0d2e\u0d3e\u0d2f\u0d41\u0d02 \u0d09\u0d23\u0d4d\u0d1f\u0d3e\u0d2f\u0d3f\u0d30\u0d3f\u0d15\u0d4d\u0d15\u0d23\u0d02.
+ui.AttributeTab.pan-to-previous-row = T\:Pan to previous row
+ui.AttributeTab.pan-to-next-row = T\:Pan to next row
 ui.AttributeTab.select-in-task-window = \u0d2a\u0d4d\u0d30\u0d4a\u0d1c\u0d15\u0d4d\u0d31\u0d4d\u0d31\u0d4d\u200c \u0d35\u0d3f\u0d23\u0d4d\u0d1f\u0d4b\u0d35\u0d3f\u0d32\u0d4d\u200d \u0d24\u0d3f\u0d30\u0d1e\u0d4d\u0d1e\u0d46\u0d1f\u0d41\u0d15\u0d4d\u0d15\u0d41\u0d15
 ui.AttributeTab.task-frame-must-be-open = \u0d2a\u0d4d\u0d30\u0d4a\u0d1c\u0d15\u0d4d\u0d31\u0d4d\u0d31\u0d4d\u200c  \u0d2b\u0d4d\u0d30\u0d46\u0d2f\u0d3f\u0d02 \u0d24\u0d41\u0d31\u0d28\u0d4d\u0d28\u0d3f\u0d30\u0d3f\u0d15\u0d4d\u0d15\u0d46\u0d23\u0d4d\u0d1f\u0d3e\u0d24\u0d3e\u0d23\u0d4d .
 ui.AttributeTab.zoom-to-full-extent = \u0d2e\u0d41\u0d34\u0d41\u0d35\u0d28\u0d4d\u200d \u0d35\u0d3f\u0d38\u0d4d\u0d24\u0d3e\u0d30\u0d24\u0d4d\u0d24\u0d3f\u0d32\u0d47\u0d15\u0d4d\u0d15\u0d4d  \u0d35\u0d47\u0d23\u0d4d\u0d1f\u0d3f \u0d12\u0d30\u0d41 \u0d2d\u0d3e\u0d17\u0d02 \u0d2e\u0d3e\u0d24\u0d4d\u0d30\u0d02 \u0d35\u0d32\u0d41\u0d24\u0d3e\u0d15\u0d4d\u0d15\u0d41\u0d15 
