@@ -1117,6 +1117,8 @@ ui.addremove.AddRemovePanel.remove-all = Remover Todos
 ui.AttributeTab.flash-selected-rows = Pisque as Linhas Selecionadas
 ui.AttributeTab.one-or-more-layers-must-be-present = Um ou mais layers deve estar presente
 ui.AttributeTab.one-or-more-rows-must-be-selected = Uma ou mais linhas devem estar selecionadas
+ui.AttributeTab.pan-to-previous-row = T\:Pan to previous row
+ui.AttributeTab.pan-to-next-row = T\:Pan to next row
 ui.AttributeTab.select-in-task-window = Selecione na Janela de Tarefa
 ui.AttributeTab.task-frame-must-be-open = O quadro de Terefa deve estar aberto
 ui.AttributeTab.zoom-to-full-extent = Zoom Para a Extens\u00E3o Total
