@@ -1117,6 +1117,8 @@ ui.addremove.AddRemovePanel.remove-all = Remover todos
 ui.AttributeTab.flash-selected-rows = Mostrar as linhas selecionadas
 ui.AttributeTab.one-or-more-layers-must-be-present = Um ou mais layers devem estar presente
 ui.AttributeTab.one-or-more-rows-must-be-selected = Uma ou mais linhas devem estar selecionadas
+ui.AttributeTab.pan-to-previous-row = T\:Pan to previous row
+ui.AttributeTab.pan-to-next-row = T\:Pan to next row
 ui.AttributeTab.select-in-task-window = Selecionar uma nova tarefa
 ui.AttributeTab.task-frame-must-be-open = O quadro de tarefa deve estar aberto
 ui.AttributeTab.zoom-to-full-extent = Visualizar total
