@@ -1121,6 +1121,8 @@ ui.addremove.AddRemovePanel.remove-all = \u5168\u90E8\u5220\u9664
 ui.AttributeTab.flash-selected-rows = \u95EA\u5149\u706F\u9009\u62E9\u4E86\u884C
 ui.AttributeTab.one-or-more-layers-must-be-present = \u4E00\u4E2A\u6216\u591A\u4E2A\u5C42\u5FC5\u987B\u5B58\u5728\u3002
 ui.AttributeTab.one-or-more-rows-must-be-selected = \u4E00\u4E2A\u6216\u591A\u4E2A\u884C\u5FC5\u987B\u9009\u62E9\u3002
+ui.AttributeTab.pan-to-previous-row = T\:Pan to previous row
+ui.AttributeTab.pan-to-next-row = T\:Pan to next row
 ui.AttributeTab.select-in-task-window = \u9009\u62E9\u5728\u9879\u76EE\u7A97\u53E3\u3002
 ui.AttributeTab.task-frame-must-be-open = \u9879\u76EE\u7684\u6846\u67B6\u5FC5\u987B\u662F\u5F00\u653E\u7684\u3002
 ui.AttributeTab.zoom-to-full-extent = \u653E\u5927\u5230\u5168\u56FE
