@@ -1121,6 +1121,8 @@ ui.addremove.AddRemovePanel.remove-all = \u5168\u90E8\u522A\u9664
 ui.AttributeTab.flash-selected-rows = \u9583\u5149\u71C8\u9078\u64C7\u4E86\u884C
 ui.AttributeTab.one-or-more-layers-must-be-present = \u4E00\u500B\u6216\u591A\u500B\u5C64\u5FC5\u9808\u5B58\u5728\u3002
 ui.AttributeTab.one-or-more-rows-must-be-selected = \u4E00\u500B\u6216\u591A\u500B\u884C\u5FC5\u9808\u9078\u64C7\u3002
+ui.AttributeTab.pan-to-previous-row = T\:Pan to previous row
+ui.AttributeTab.pan-to-next-row = T\:Pan to next row
 ui.AttributeTab.select-in-task-window = \u9078\u64C7\u5728\u9805\u76EE\u7A97\u53E3\u3002
 ui.AttributeTab.task-frame-must-be-open = \u9805\u76EE\u7684\u6846\u67B6\u5FC5\u9808\u662F\u958B\u653E\u7684\u3002
 ui.AttributeTab.zoom-to-full-extent = \u653E\u5927\u5230\u5168\u5716
